--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ part2/part2
 part2_final/part2_final
 part3/part3
 part3_final/part3_final
+part4/part4
+part4_final/part4_final
 helloworld/helloworld
 webserver/webserver
