--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ part3/part3
 part3_final/part3_final
 part4/part4
 part4_final/part4_final
+part5/part5
+part5_client/part5_client
 helloworld/helloworld
 webserver/webserver
